syntax = "proto3";

option csharp_namespace = "gRPCCertificateSign";

package node;


service CertificateSign {
    rpc Sign(SigningRequest) returns (SigningResponse);
}

message SigningRequest {
    string auth_token = 1;
    int64 timestamp = 2;
}

message SigningResponse {
    repeated bytes chain = 1;
}